<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Main.Teacher.EditProfileTeacher" >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar_edit_profile_teather"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:title="@string/edit_profile_teather"
            app:menu="@menu/menu_edit_profile"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/main_profile_image_edit_layout_teather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:id="@+id/main_profile_image_edit_teather"
                        android:layout_width="match_parent"
                        android:layout_height="124dp"
                        android:scaleType="centerCrop"
                        android:src="#4C7ABD"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/ic_outline_add_photo_alternate_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-40dp"
                    android:layout_marginStart="15dp"
                    android:layout_below="@+id/main_profile_image_edit_layout_teather" >

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/changable_ava_teather"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/ic_user"
                        app:civ_border_color="@color/white"
                        app:civ_border_width="3.5dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_outline_add_photo_alternate_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_account_edit_profile_teather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:endIconMode="clear_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/product_sans_medium"
                        android:inputType="textPersonName"/>

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/username_layout_editProfile_teather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:endIconMode="clear_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/product_sans_medium"
                        android:inputType="textPersonName"/>

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_layout_editProfile_tether"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/e_mail"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:endIconMode="clear_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/product_sans_medium"
                        android:inputType="textPersonName"/>

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/city_layout_editProfile_teather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:endIconMode="clear_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/product_sans_medium"
                        android:inputType="textPersonName"/>

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/topic_layout_teather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/topic"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:endIconMode="dropdown_menu"
                    app:errorEnabled="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu" >


                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/topic_auto_edit_profile_teather"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:inputType="none"
                        android:fontFamily="@font/product_sans_medium"/>

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/school_layout_editProfile_teather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/school"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:endIconMode="clear_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/product_sans_medium"
                        android:inputType="textPersonName"/>

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textField_bithday_edit_profile_teather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/birthday"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="15dp"
                    app:endIconMode="custom"
                    app:endIconDrawable="@drawable/ic_outline_today_24"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/date_textView_edit_teather"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/product_sans_medium"
                        android:focusable="false"
                        android:inputType="none"/>

                </com.google.android.material.textfield.TextInputLayout>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/security"
                    android:fontFamily="@font/product_sans_bold"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/chan_pas_teather"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/change_password"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="40dp" />

            </RelativeLayout>



        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>